# command-not-found

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  command-not-found.cpp  generate-db.js  jsconfig.json  modify_command_list.py  package-lock.json  package.json  root-commands-x86_64.h  update_command_lists.sh
.github/: FUNDING.yml
command_list/: __init__.py  command_list.py
game-packages/: commands-aarch64-8a75781.h  commands-arm-1150e2f.h  commands-arm-1a0e8eb.h  commands-i686-1d0b1a9.h  commands-i686-8d3a39b.h  commands-i686-d6b54da.h  commands-x86_64-148e32a.h  commands-x86_64-66e53d2.h
games/: commands-arm.h
main/: commands-aarch64.h  commands-arm.h  commands-i686.h  commands-x86_64.h
root/: commands-aarch64.h  commands-arm.h  commands-i686.h  commands-x86_64.h
science/: commands-arm.h
science-packages/: commands-aarch64-6485c13.h  commands-aarch64-e44883a.h  commands-aarch64-f7dc28e.h  commands-arm-19027d8.h  commands-arm-4cdd999.h  commands-arm-63b9ef3.h  commands-arm-ed28bce.h  commands-i686-f8618a6.h  commands-x86_64-5170b9e.h  commands-x86_64-6fd4a80.h
termux-packages/: commands-aarch64-026b032.h  commands-aarch64-03c1693.h  commands-aarch64-07a6725.h  commands-aarch64-1b1d8cd.h  commands-aarch64-1d8abfa.h  commands-aarch64-1f4fd24.h  commands-aarch64-22ecf22.h  commands-aarch64-231b9fb.h  commands-aarch64-27e8c96.h  commands-aarch64-2cd0a5d.h  commands-aarch64-2e794e2.h  commands-aarch64-302a8cc.h  commands-aarch64-366763d.h  commands-aarch64-3ad05e7.h  commands-aarch64-5506238.h  commands-aarch64-5ea47ac.h  (+113 more)
(+108 files in other folders)
